Characterisitc style changed
